[package]
name = "fast-dlt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
thiserror = "1.0"
fallible-iterator = "0.3.0"
nom = "7.1.1"
chrono = "0.4.23"
simdutf8 = "0.1.4"
